--- a/client/src/app/patient-dashboard-page/components/patient-dashboaed-appointment/patient-dashboaed-appointment.component.html
+++ b/client/src/app/patient-dashboard-page/components/patient-dashboaed-appointment/patient-dashboaed-appointment.component.html
@@ -3,15 +3,31 @@
   <ul class="appointments-list">
     <li *ngFor="let appointment of appointments" class="appointment-item">
       <div class="appointment-details">
-        <p><strong>Дата приёма:</strong> {{ appointment.date | date: 'dd.MM.yyyy' }}</p>
-        <p><strong>Время приёма:</strong> {{ appointment.start_time | customTime }}</p>
+        <p>
+          <strong>Дата приёма:</strong>
+          {{ appointment.date | date : "dd.MM.yyyy" }}
+        </p>
+        <p>
+          <strong>Время приёма:</strong>
+          {{ appointment.start_time | customTime }}
+        </p>
         <p><strong>ФИО врача:</strong> {{ appointment.doctor_name }}</p>
         <p><strong>Специальность врача:</strong> {{ appointment.specialty }}</p>
-        <p><strong>Описание проблемы:</strong> {{ appointment.problem_description }}</p>
-      </div>
-        <button (click)="deleteAppointment(appointment.appoint_id.toString())" class="delete-appointment-btn">
+        <p>
+          <strong>Описание проблемы:</strong>
+          {{ appointment.problem_description }}
+        </p>
+
+        <button
+          (click)="deleteAppointment(appointment.appoint_id.toString())"
+          class="delete-appointment-btn"
+        >
           Удалить запись
         </button>
+        <button (click)="addNotif(appointment)" class="add-reminder-btn">
+          Добавить напоминания
+        </button>
+      </div>
     </li>
   </ul>
 </div>
