--- a/client/src/app/patient-dashboard-page/components/patient-dashboaed-appointment/patient-dashboaed-appointment.component.scss
+++ b/client/src/app/patient-dashboard-page/components/patient-dashboaed-appointment/patient-dashboaed-appointment.component.scss
@@ -39,8 +39,8 @@
     background-color: $text-color;
     color: white;
     border: none;
-    margin-right:  50%;
     padding: 10px 20px;
+    margin-bottom: 10px;
     border-radius: 4px;
     cursor: pointer;
     float: right;
