--- a/client/src/app/admin-dashboard-page/components/admin-dashboard-doctors-create-schedule-form/admin-dashboard-doctors-create-schedule-form.component.html
+++ b/client/src/app/admin-dashboard-page/components/admin-dashboard-doctors-create-schedule-form/admin-dashboard-doctors-create-schedule-form.component.html
@@ -1,4 +1,6 @@
 <div class="card">
+  <a routerLink="/admin-dashboard" class="brand-logo">&#x2717;</a>
+
     <h3 class="card-title">Создание расписания  {{ doctorName }}</h3>
   
     <form (ngSubmit)="onSubmit()">
