--- a/client/src/app/doctor-dashboard-page/components/doctor-dashboard-create-receipt/doctor-dashboard-create-receipt.component.html
+++ b/client/src/app/doctor-dashboard-page/components/doctor-dashboard-create-receipt/doctor-dashboard-create-receipt.component.html
@@ -1,4 +1,6 @@
 <div class="create-receipt-container">
+  <a routerLink="/doctor-dashboard" class="brand-logo">&#x2717;</a>
+
   <h2>Создание Рецепта</h2>
 
   <form (ngSubmit)="submitReceipt()">
