--- a/client/src/app/doctor-dashboard-page/components/doctor-dashboard-patient-medcard/doctor-dashboard-patient-medcard.component.scss
+++ b/client/src/app/doctor-dashboard-page/components/doctor-dashboard-patient-medcard/doctor-dashboard-patient-medcard.component.scss
@@ -1,26 +1,35 @@
 .medcard-container {
-    max-width: 600px;
-    margin: auto;
-    padding: 20px;
-    background-color: #f5f5f5;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  margin: auto;
+  padding: 20px;
+  position: relative;
+  background-color: #f5f5f5;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-  
-    .medcard-details {
-      background-color: white;
-      padding: 15px;
-      margin-bottom: 15px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
+  h2 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
 
-      p {
-        margin: 10px 0;
-        color: #666;
-      }
+  .medcard-details {
+    background-color: white;
+    padding: 15px;
+    margin-bottom: 15px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+
+    p {
+      margin: 10px 0;
+      color: #666;
     }
+  }
+}
+
+.brand-logo {
+  text-decoration: none;
+  color: black;
+  position: absolute;
+  top: 20px;
+  right: 20px;
 }
