--- a/client/src/app/doctor-dashboard-page/components/doctor-dashboard-sidebar/doctor-dashboard-sidebar.component.html
+++ b/client/src/app/doctor-dashboard-page/components/doctor-dashboard-sidebar/doctor-dashboard-sidebar.component.html
@@ -1,4 +1,6 @@
 <div class="sidebar">
   <a routerLinkActive="active" routerLink="/doctor-dashboard">Расписание</a>
   <a routerLinkActive="active" routerLink="/patient-list">Список пациентов</a>
+  <a (click)="onLogoutClick()">Выйти</a>
+
 </div>
