--- a/client/src/app/patient-dashboard-page/components/patient-dashboaed-sidebar/patient-dashboaed-sidebar.component.html
+++ b/client/src/app/patient-dashboard-page/components/patient-dashboaed-sidebar/patient-dashboaed-sidebar.component.html
@@ -3,5 +3,7 @@
     <a routerLinkActive="active" routerLink="/patient-dashboard">Мои приёмы</a>
     <a routerLinkActive="active"  routerLink="/appointment-add">Записаться на приём</a>
     <a routerLinkActive="active" routerLink="/receipts">Рецепты</a>
+    <a (click)="onLogoutClick()">Выйти</a>
+
   </div>
   
