--- a/client/src/app/shared/layouts/site-layout/site-layout.component.html
+++ b/client/src/app/shared/layouts/site-layout/site-layout.component.html
@@ -1,4 +1,4 @@
-<p>site-layout sdasworks!</p>
+<!-- <p>site-layout sdasworks!</p>
 
 sdasdsdsdskcxopckmxopkddksc
 
@@ -8,4 +8,4 @@ sdasdsdsdskcxopckmxopkddksc
 <pre>dsdsdsdsds
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, quas. Sunt, illum. Rem, corrupti nulla porro voluptatem nemo praesentium obcaecati a illo, similique, quis dolore cumque maiores libero sunt assumenda.sdsdsdwdadsdads</pre>
 dsdsdsdsds
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, quas. Sunt, illum. Rem, corrupti nulla porro voluptatem nemo praesentium obcaecati a illo, similique, quis dolore cumque maiores libero sunt assumenda.sdsdsdwdadsdads
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, quas. Sunt, illum. Rem, corrupti nulla porro voluptatem nemo praesentium obcaecati a illo, similique, quis dolore cumque maiores libero sunt assumenda.sdsdsdwdadsdads -->
